--- a/code/resources/assets/scss/admin/layout/_content.scss
+++ b/code/resources/assets/scss/admin/layout/_content.scss
@@ -160,6 +160,6 @@
 .opened--left,
 .opened--right {
   .k-off-canvas-overlay {
-    z-index: 2; /* 2 */
+    z-index: 9; /* 2 */
   }
 }
